Douglas-Peuckerized. #1306 Also upon mouseup, simplifies and then draws the simplified path. D-P Tolerance hardcoded to 3; seems like a reasonable compromise. Could be settable in an "advanced" configuration for the path tool. fixed bug where hand cursor was not showing because of a hardcoded absolute localhost:5000 URL in zoom.css.

--- a/webapi/static/zoom.css
+++ b/webapi/static/zoom.css
@@ -1,4 +1,4 @@
-.grabbing { cursor: url(http://localhost:5000/static/images/zoom/closedhand.cur), default !important; }
-.hand { cursor: url(http://localhost:5000/static/images/zoom/openhand.cur), default !important; }
+.grabbing { cursor: url(/static/images/zoom/closedhand.cur), default !important; }
+.hand { cursor: url(/static/images/zoom/openhand.cur), default !important; }
 .pointer { cursor: default !important; }
 
